@@ -26,14 +26,14 @@ function test.editfield_cursor()
     expect.eq(4, e.cursor)
     e:onInput{KEYBOARD_CURSOR_RIGHT=true}
     expect.eq(5, e.cursor)
-    -- e:onInput{A_CARE_MOVE_W=true}
-    -- expect.eq(1, e.cursor, 'interpret alt-left as home') -- uncomment when we have a home key
-    e:onInput{CUSTOM_CTRL_F=true}
-    expect.eq(6, e.cursor, 'interpret Ctrl-f as goto beginning of next word')
-    e:onInput{CUSTOM_CTRL_E=true}
-    expect.eq(16, e.cursor, 'interpret Ctrl-e as end')
-    e:onInput{CUSTOM_CTRL_B=true}
-    expect.eq(9, e.cursor, 'interpret Ctrl-b as goto end of previous word')
+    e:onInput{CUSTOM_HOME=true}
+    expect.eq(1, e.cursor, 'cursor should be at beginning of string')
+    e:onInput{CUSTOM_CTRL_RIGHT=true}
+    expect.eq(6, e.cursor, 'goto beginning of next word')
+    e:onInput{CUSTOM_END=true}
+    expect.eq(16, e.cursor, 'cursor should be at end of string')
+    e:onInput{CUSTOM_CTRL_LEFT=true}
+    expect.eq(9, e.cursor, 'goto end of previous word')
 end
 
 function test.editfield_click()
